--- a/src/assets/less/core/mixins.less
+++ b/src/assets/less/core/mixins.less
@@ -28,6 +28,13 @@
     appearance: none;
 }
 
+.mixin-userSelectNone() {
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
 // styling
 // =======
 
