--- a/src/assets/less/elements/btnLoad.less
+++ b/src/assets/less/elements/btnLoad.less
@@ -3,9 +3,10 @@
 .btnLoad {
 
     .mixin-clearAppearance;
+    .mixin-defaultBorderRadius;
+    .mixin-userSelectNone;
     background-clip: padding-box;
     background: @color-main-25;
-    .mixin-defaultBorderRadius;
     border: 0;
     box-sizing: border-box;
     clear: both;
@@ -21,7 +22,6 @@
     position: relative;
     text-align: center;
     text-overflow: clip;
-    user-select: none;
     vertical-align: middle;
     white-space: nowrap;
 
