--- a/src/assets/less/elements/buttons.less
+++ b/src/assets/less/elements/buttons.less
@@ -8,6 +8,7 @@
     -webkit-font-smoothing: antialiased;
     .mixin-clearAppearance;
     .mixin-defaultBorderRadius;
+    .mixin-userSelectNone;
     background-clip: padding-box;
     background: linear-gradient(to bottom, @color-main-24, @color-main-23);
     border: @color-main-21 1px solid;
@@ -25,7 +26,6 @@
     position: relative;
     text-align: left;
     text-shadow: 0 1px 0 @color-main-25;
-    user-select: none;
     vertical-align: middle;
     white-space: nowrap;
 
