--- a/src/assets/less/elements/filters.less
+++ b/src/assets/less/elements/filters.less
@@ -52,13 +52,13 @@
 
     .filterGroup__header {
 
+        .mixin-userSelectNone;
         background: @color-main-25;
         border-top: @color-main-23 1px solid;
         box-sizing: border-box;
         cursor: pointer;
         height: 3.5rem;
         position: relative;
-        user-select: none;
 
         h4 {
             line-height: 2.5rem;
