--- a/src/assets/less/elements/radioBtn.less
+++ b/src/assets/less/elements/radioBtn.less
@@ -6,8 +6,9 @@
 .radioBtn {
 
     .mixin-clearAppearance;
-    background: @color-main-25;
     .mixin-defaultBorderRadius;
+    .mixin-userSelectNone;
+    background: @color-main-25;
     border: @color-main-23 1px solid;
     box-sizing: border-box;
     color: @color-main-10;
@@ -19,7 +20,6 @@
     position: relative;
     text-align: left;
     text-overflow: clip;
-    user-select: none;
     vertical-align: middle;
     white-space: nowrap;
 
