--- a/src/assets/less/elements/reviews-s.less
+++ b/src/assets/less/elements/reviews-s.less
@@ -21,12 +21,12 @@
 
         .meta {
 
+            .mixin-userSelectNone;
             background: #fff;
             border-bottom: @color-main-23 1px solid;
             cursor: pointer;
             padding: 5px 10px 10px 10px;
             position: relative;
-            user-select: none;
 
             &::after {
                 .mixin-icon;
