--- a/src/assets/less/elements/superHeader.less
+++ b/src/assets/less/elements/superHeader.less
@@ -14,8 +14,8 @@
     min-height: @superHeader-height;
     position: relative;
 
-    * {
-        user-select: none !important;
+    &, * {
+        .mixin-userSelectNone;
     }
 
 }
