--- a/src/assets/less/utilities/interface.less
+++ b/src/assets/less/utilities/interface.less
@@ -40,7 +40,7 @@
 
 // text selection
 
-.slct-none { user-select: none !important; }
+.slct-none { .mixin-userSelectNone !important; }
 
 // scroll
 
