--- a/src/assets/less/elements/drawers.less
+++ b/src/assets/less/elements/drawers.less
@@ -17,7 +17,8 @@
         // header
 
         .header {
-
+            
+            .mixin-userSelectNone;
             background: #fff;
             border-bottom: @color-main-22 1px solid;
             cursor: pointer;
@@ -25,7 +26,6 @@
             min-height: 20px;
             padding: 5px 30px 5px 10px;
             position: relative;
-            user-select: none;
 
             h1, h2, h3, h4, h5, h6 {
                 color: @color-main-10;
