--- a/src/assets/less/elements/flipBtns.less
+++ b/src/assets/less/elements/flipBtns.less
@@ -1,10 +1,10 @@
 /** flipBtns.less */
 
 .flipBtns {
+    .mixin-userSelectNone;
     max-height: 1px;
     position: absolute;
     top: 50%;
-    user-select: none;
     width: 100%;
     height: 100%;
     z-index: 20;
