--- a/src/assets/less/elements/pageDots.less
+++ b/src/assets/less/elements/pageDots.less
@@ -4,6 +4,7 @@
 // =====
 
 .pageDots {
+    .mixin-userSelectNone;
     background: #fff;
     border-radius: 12px;
     display: inline-block;
@@ -11,7 +12,6 @@
     height: 25px;
     margin: 0 auto;
     text-align: center;
-    user-select: none;
     z-index: 20;
 }
 
