--- a/src/assets/less/elements/rangeInput.less
+++ b/src/assets/less/elements/rangeInput.less
@@ -30,10 +30,10 @@
 
 .js .rangeInput {
 
+    .mixin-userSelectNone;
     cursor: default;
     height: 45px;
     position: relative;
-    user-select: none;
 
     // track & range indicator
 
