--- a/src/assets/less/utilities/styling.less
+++ b/src/assets/less/utilities/styling.less
@@ -113,6 +113,11 @@
 .tc-success, .tc-positive { color: @color-positive-15 !important; }
 .tc-white                 { color: #fff !important; }
 
+// semantic border colors
+
+.bc-transparent { border-color: @color-transparent !important; }
+.bc-white       { border-color: #fff !important; }
+
 // opacity
 
 .opacity-full { opacity: 1 !important; }
