--- a/src/assets/less/yoshino-ui-core.less
+++ b/src/assets/less/yoshino-ui-core.less
@@ -59,7 +59,6 @@
 @import "elements/drawerMenu.less";
 @import "elements/drawers.less";
 @import "elements/filterBtns.less";
-@import "elements/filterMenu.less";
 @import "elements/filters.less";
 @import "elements/flipBtns.less";
 @import "elements/flyout.less";
@@ -85,6 +84,7 @@
 @import "elements/linkList.less";
 @import "elements/loading.less";
 @import "elements/mainMenu.less";
+@import "elements/menu.less";
 @import "elements/messages.less";
 @import "elements/microFeedback.less";
 @import "elements/modal-s.less";
