--- a/src/assets/less/elements/menu.less
+++ b/src/assets/less/elements/menu.less
@@ -28,7 +28,7 @@
     
     display: block;
     font-weight: bold;
-    padding: 5px 35px 5px 10px;
+    padding: .5rem 3.5rem .5rem 1rem;
     position: relative;
     
     &:active,
@@ -59,7 +59,7 @@
 }
 
 .menu .menu .menu .menu__link {
-    padding-left: 2em;
+    padding-left: 2.5rem;
 }
 
 // modifiers
