--- a/src/assets/less/utilities/layout.less
+++ b/src/assets/less/utilities/layout.less
@@ -195,9 +195,10 @@
 
 // overflow
 
-.ovrfl-x-hide { overflow-x: hidden !important; }
-.ovrfl-y-hide { overflow-y: hidden !important; }
-.ovrfl-hide   { overflow: hidden !important; }
+.ovrfl-x-hidden { overflow-x: hidden !important; }
+.ovrfl-y-hidden { overflow-y: hidden !important; }
+.ovrfl-hidden   { overflow: hidden !important; }
+.ovrfl-visible  { overflow: visible !important; }
 
 // z-index
 
