--- a/src/assets/less/utilities/responsive-layout.less
+++ b/src/assets/less/utilities/responsive-layout.less
@@ -149,7 +149,7 @@
 
     .small-ovrfl-x-hide { overflow-x: hidden !important; }
     .small-ovrfl-y-hide { overflow-y: hidden !important; }
-    .small-ovrfl-hide   { overflow: hidden !important; }
+    .small-ovrfl-hidden   { overflow: hidden !important; }
 
     // z-index
 
@@ -315,7 +315,7 @@
 
     .medium-ovrfl-x-hide { overflow-x: hidden !important; }
     .medium-ovrfl-y-hide { overflow-y: hidden !important; }
-    .medium-ovrfl-hide   { overflow: hidden !important; }
+    .medium-ovrfl-hidden   { overflow: hidden !important; }
 
     // z-index
 
@@ -481,7 +481,7 @@
 
     .large-ovrfl-x-hide { overflow-x: hidden !important; }
     .large-ovrfl-y-hide { overflow-y: hidden !important; }
-    .large-ovrfl-hide   { overflow: hidden !important; }
+    .large-ovrfl-hidden   { overflow: hidden !important; }
 
     // z-index
 
@@ -647,7 +647,7 @@
 
     .xlarge-ovrfl-x-hide { overflow-x: hidden !important; }
     .xlarge-ovrfl-y-hide { overflow-y: hidden !important; }
-    .xlarge-ovrfl-hide   { overflow: hidden !important; }
+    .xlarge-ovrfl-hidden   { overflow: hidden !important; }
 
     // z-index
 
