--- a/src/templates/pages/elements/popOver.html
+++ b/src/templates/pages/elements/popOver.html
@@ -110,7 +110,7 @@ The following examples illustrate how to position the pop-overs.
 </div>
 
 {% markdown %}
-To create a **new context for positioning**, set the option `wrap`to true. The following **example shows the markup after DOM manipulation**.
+To create a **new context for positioning**, set the option `wrap` to *true*. The following **example shows the markup after DOM manipulation**.
 {% endmarkdown %}
 
 <div class="documentation__block">
