--- a/docs/assets/css/yoshino-ui-core.css
+++ b/docs/assets/css/yoshino-ui-core.css
@@ -3791,14 +3791,17 @@ body {
   display: block;
   clear: both;
 }
-.ovrfl-x-hide {
+.ovrfl-x-hidden {
   overflow-x: hidden !important;
 }
-.ovrfl-y-hide {
+.ovrfl-y-hidden {
   overflow-y: hidden !important;
 }
-.ovrfl-hide {
+.ovrfl-hidden {
   overflow: hidden !important;
+}
+.ovrfl-visible {
+  overflow: visible !important;
 }
 .z-1 {
   z-index: 100;
@@ -4415,7 +4418,7 @@ body {
   .small-ovrfl-y-hide {
     overflow-y: hidden !important;
   }
-  .small-ovrfl-hide {
+  .small-ovrfl-hidden {
     overflow: hidden !important;
   }
   .small-z-1 {
@@ -5033,7 +5036,7 @@ body {
   .medium-ovrfl-y-hide {
     overflow-y: hidden !important;
   }
-  .medium-ovrfl-hide {
+  .medium-ovrfl-hidden {
     overflow: hidden !important;
   }
   .medium-z-1 {
@@ -5651,7 +5654,7 @@ body {
   .large-ovrfl-y-hide {
     overflow-y: hidden !important;
   }
-  .large-ovrfl-hide {
+  .large-ovrfl-hidden {
     overflow: hidden !important;
   }
   .large-z-1 {
@@ -6269,7 +6272,7 @@ body {
   .xlarge-ovrfl-y-hide {
     overflow-y: hidden !important;
   }
-  .xlarge-ovrfl-hide {
+  .xlarge-ovrfl-hidden {
     overflow: hidden !important;
   }
   .xlarge-z-1 {
@@ -22549,7 +22552,7 @@ a:visited:hover {
 .menu__link {
   display: block;
   font-weight: bold;
-  padding: 5px 35px 5px 10px;
+  padding: .5rem 3.5rem .5rem 1rem;
   position: relative;
 }
 .menu__link:active,
@@ -22571,7 +22574,7 @@ a:visited:hover {
   font-weight: normal;
 }
 .menu .menu .menu .menu__link {
-  padding-left: 2em;
+  padding-left: 2.5rem;
 }
 .menu__item--active > :first-child {
   background: #ecebea;
