--- a/src/templates/layouts/base.html
+++ b/src/templates/layouts/base.html
@@ -26,22 +26,26 @@
                 </div>
             </div>
             <div id="menu" class="dock dock--right" data-dock="autohide:true">
+                {#
+                    The following menus are automatically generated via a custom nunjucks
+                    extention, to be found in src/dev/nunjucks-extentions.js
+                #}
                 <h4>Introduction</h4>
-                {% menu 'pages/introduction/ + ./src/templates/pages/introduction + linkList--stripped' %}
+                {% menu 'pages/introduction/ + ./src/templates/pages/introduction + b-0 br-0' %}
                 <h4>Core</h4>
-                {% menu './pages/core/ + ./src/templates/pages/core + linkList--stripped' %}
+                {% menu './pages/core/ + ./src/templates/pages/core + b-0 br-0' %}
                 <h4>Theme</h4>
-                {% menu 'pages/theme/ + ./src/templates/pages/theme + linkList--stripped' %}
+                {% menu 'pages/theme/ + ./src/templates/pages/theme + b-0 br-0' %}
                 <h4>Utilities</h4>
-                {% menu 'pages/utilities/ + ./src/templates/pages/utilities + linkList--stripped' %}
+                {% menu 'pages/utilities/ + ./src/templates/pages/utilities + b-0 br-0' %}
                 <h4>Elements</h4>
-                {% menu 'pages/elements/ + ./src/templates/pages/elements + linkList--stripped' %}
+                {% menu 'pages/elements/ + ./src/templates/pages/elements + b-0 br-0' %}
                 <h4>JS Interface</h4>
-                {% menu 'pages/js-interface/ + ./src/templates/pages/js-interface + linkList--stripped' %}
+                {% menu 'pages/js-interface/ + ./src/templates/pages/js-interface + b-0 br-0' %}
                 <h4>Tools</h4>
-                {% menu 'pages/tools/ + ./src/templates/pages/tools + linkList--stripped' %}
+                {% menu 'pages/tools/ + ./src/templates/pages/tools + b-0 br-0' %}
                 <h4>Workflows / Tutorials</h4>
-                {% menu 'pages/workflows/ + ./src/templates/pages/workflows + linkList--stripped' %}
+                {% menu 'pages/workflows/ + ./src/templates/pages/workflows + b-0 br-0' %}
             </div>
             <div class="documentation__body">
                 {% block main %}
@@ -65,6 +69,10 @@
         <script src="assets/js/yoshino-ui-core.js"></script>
         <script>
             (function() {
+                
+                /**
+                 *  Hightligth the current menu item.
+                 */
 
                 var $menu           = $('#menu');
                 var $menuLinks      = $menu.find('.linkList__link');
@@ -72,8 +80,8 @@
 
                 $menuLinks.each(function() {
                     
-                    var $this          = $(this);
-                    var thisHref       = $this.attr('href').slice(1);
+                    var $this       = $(this);
+                    var thisHref    = $this.attr('href').slice(1);
 
                     if (Helper.stringContains(currentPagePath, thisHref)) {
                         $this.parent().addClass('linkList__item--active');
