--- a/src/assets/less/elements/buttons.less
+++ b/src/assets/less/elements/buttons.less
@@ -801,51 +801,51 @@
     }
 
     .btn:first-child {
-        border-radius: @borderRadius 0 0 @borderRadius;
+        border-radius: (1px * @borderRadius) 0 0 (1px * @borderRadius);
     }
 
     .btn:last-child {
-        border-radius: 0 @borderRadius @borderRadius 0;
+        border-radius: 0 (1px * @borderRadius) (1px * @borderRadius) 0;
     }
 
     // standard, rounded
 
     .btn.btn--rounded:first-child {
-        border-radius: (@borderRadius * 6px) 0 0 (@borderRadius * 6px);
+        border-radius: (6px * @borderRadius) 0 0 (6px * @borderRadius);
     }
 
     .btn.btn--rounded:last-child {
-        border-radius: 0 (@borderRadius * 6px) (@borderRadius * 6px) 0;
+        border-radius: 0 (6px * @borderRadius) (6px * @borderRadius) 0;
     }
 
     // small, rounded
 
     .btn.btn--small.btn--rounded:first-child {
-        border-radius: (@borderRadius * 5px) 0 0 (@borderRadius * 5px);
+        border-radius: (5px * @borderRadius) 0 0 (5px * @borderRadius);
     }
 
     .btn.btn--small.btn--rounded:last-child {
-        border-radius: 0 (@borderRadius * 5px) (@borderRadius * 5px) 0;
+        border-radius: 0 (5px * @borderRadius) (5px * @borderRadius) 0;
     }
 
     // medium, rounded
 
     .btn.btn--medium.btn--rounded:first-child {
-        border-radius: (@borderRadius * 7.5px) 0 0 (@borderRadius * 7.5px);
+        border-radius: (7.5px * @borderRadius) 0 0 (7.5px * @borderRadius);
     }
 
     .btn.btn--medium.btn--rounded:last-child {
-        border-radius: 0 (@borderRadius * 7.5px) (@borderRadius * 7.5px) 0;
+        border-radius: 0 (7.5px * @borderRadius) (7.5px * @borderRadius) 0;
     }
 
     // large, rounded
 
     .btn.btn--large.btn--rounded:first-child {
-        border-radius: (@borderRadius * 10px) 0 0 (@borderRadius * 10px);
+        border-radius: (10px * @borderRadius) 0 0 (10px * @borderRadius);
     }
 
     .btn.btn--large.btn--rounded:last-child {
-        border-radius: 0 (@borderRadius * 10px) (@borderRadius * 10px) 0;
+        border-radius: 0 (10px * @borderRadius) (10px * @borderRadius) 0;
     }
 
 }
